--- a/.project
+++ b/.project
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<projectDescription>
-	<name>casaDePepeYJulian</name>
-	<comment></comment>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?><projectDescription>
+	<name>2021s1-tp2-casa-de-pepe-y-julian-lgassman</name>
+	<comment/>
 	<projects>
 	</projects>
 	<buildSpec>
